Fix bootable volumes filter chips alignment

--- a/src/views/catalog/CreateFromInstanceTypes/CreateFromInstanceType.scss
+++ b/src/views/catalog/CreateFromInstanceTypes/CreateFromInstanceType.scss
@@ -1,5 +1,10 @@
 .create-vm-instance-type-section {
   padding: var(--pf-global--spacer--xl);
+  &__list {
+    li + li {
+      margin-top: 0;
+    }
+  }
   &__step {
     font-size: var(--pf-global--FontSize--xl);
     height: var(--pf-global--spacer--xl);
